# stash-empornium

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config  default-tags.toml  default.ini  default.toml  docker-default.ini  emp_stash_fill.py  emp_stash_fill.user.js  galleries.py  pyproject.toml  requirements.txt  templates.json  webp2gif.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
default-templates/: fakestash-v2  fakestash-v3  r18  tushy
migrations/: alembic.ini  env.py
migrations/versions/: 017767fd9fdb_.py  0b7028b71064_.py  7990cc760362_.py  e8e3ef7a0fd7_.py  feb7b60bf53f_.py
resources/: stash_library.user.js
static/: site.webmanifest
static/scripts/: forms.js
tests/: test_config.py  test_paths.py
utils/: bencoder.py  cache.py  confighandler.py  customtypes.py  db.py  generator.py  imagehandler.py  models.py  packs.py  paths.py  stash.py  structures.py  taghandler.py  torrentclients.py
utils/torrent/: deluge.py  qbittorrent.py  torrentclient.py
webui/: errorpages.py  forms.py  validators.py  webui.py
webui/templates/: base-settings.html  base.html  categories.html  dbexport.html  errorpage.html  index.html  navbar.html  search.html  settings.html  tag-advanced.html  tag-settings.html
